redited test.tex

--- a/HW1/hw1ans.tex
+++ b/HW1/hw1ans.tex
@@ -23,18 +23,18 @@
 	\[	\frac{r\sin{\theta}\cos{\phi}}{X} = \frac{r\sin{\theta}\sin{\phi}}{Y} = \frac{c+r\cos{\theta}}{Z}
 	\]
 	From first part of the equation,
-	\begin{align*}
+	\begin{align}
 		\frac{r\sin{\theta}\cos{\phi}}{X} &= \frac{r\sin{\theta}\sin{\phi}}{Y}\\
 		\tan{\phi} &= Y/X  \\
 		\phi &= \tan ^{-1}{\frac{Y}{X}} \\
 		\sin{\phi} &= \frac{Y}{\sqrt{X^2+Y^2}}
-	\end{align*}
+	\end{align}
 
 	using this in the second part of the equation,
-	\begin{align*}
+	\begin{align}
 		\frac{r\sin{\theta}\sin{\phi}}{Y} &= \frac{c+r\cos{\theta}}{Z}\\
 		\frac{r\sin{\theta}}{\sqrt{X^2+Y^2}} &= \frac{c+r\cos{\theta}}{Z}
-	\end{align*}
+	\end{align}
 	\todo[inline]{complete these equations}
 
 	Additional intrinsic parameters we find in such system are radius $r$ and centre $c$ of the screen sphere. 
