just added conclusion in q1

--- a/HW1/hw1ans.tex
+++ b/HW1/hw1ans.tex
@@ -43,9 +43,15 @@
 	\end{align}
 	Divide either side by $\sqrt{Z^2+K^2}=\sqrt{X^2+Y^2+Z^2}=R$.
 	We get $\sin(\theta-\cos^{-1}(\frac{Z}{R}))=\frac{Kc}{R}$. Hence,
-	$\theta=\cos^{-1}(\frac{Z}{R})+\sin^{-1}(\frac{Kc}{R})$
+	$\theta=\cos^{-1}(\frac{Z}{R})+\sin^{-1}(\frac{Kc}{R})$.
 	%\todo[inline]{complete these equations}
-We've thus determined $\theta$ and $\phi$ in terms of the r,c and X,Y,Z. Here, the other intrinsic parameters we are interested in are r,c. 
+We've thus determined $\theta$ and $\phi$ in terms of the r,c and X,Y,Z.
+
+Therefore the image of the point $(X,Y,Z)$ on the image sphere is 
+\[
+(r\sin{\theta}\cos{\phi}, r\sin{\theta}\sin{\phi}, c+r\cos{\theta}),
+\]
+where $\theta=\cos^{-1}(\frac{Z}{\sqrt{X^2+Y^2+Z^2}})+\sin^{-1}(\frac{Kc}{\sqrt{X^2+Y^2+Z^2}})$ and $\phi = \tan ^{-1}{\frac{Y}{X}}$. Here, the other intrinsic parameters we are interested in are $r,c$. 
 	
 \end{itemize}
 
