--- a/HW1/hw1ans.tex
+++ b/HW1/hw1ans.tex
@@ -135,86 +135,33 @@ Even if the lines don't pass through $O$, the lines connecting vanishing points 
 
 \item Consider two sets of corresponding points $\{\mathbf{p}_{1i} = (x_{1i},y_{1i})\}_{i=1}^{n}$ and $\{\mathbf{p}_{2i} = (x_{2i},y_{2i})\}_{i=1}^{n}$. Assume that each pair of corresponding points is related as follows: $\mathbf{p}_{2i} = \alpha \mathbf{R} \mathbf{p}_{1i} + \mathbf{t} + \mathbf{\eta}_i$ where $\mathbf{R}$ is an unknown rotation matrix, $\mathbf{t}$ is an unknown translation vector, $\alpha$ is an unknown scalar factor and $\mathbf{\eta}_i$ is a vector (unknown) representing noise. Explain how you will extend the method we studied in class for estimation of $\mathbf{R}$ to estimate $\alpha$ and $\mathbf{t}$ as well. Derive all necessary equations (do not merely guess the answers). \textsf{[5 points]}
 \begin{itemize}
-\item[Ans.] Let \[ P=
-		\begin{bmatrix}
-		x_{11} & x_{12} & ... & x_{1n}\\
-		y_{11} & y_{12} & ... & y_{1n}\\	
-		\end{bmatrix}		  
-		\]	
-		and
-		\[ Q=
-		\begin{bmatrix}
-		x_{21} & x_{22} & ... & x_{2n}\\
-		y_{21} & y_{22} & ... & y_{2n}\\	
-		\end{bmatrix}		  
-		\]
-		We need to solve the optimization problem $Q=\alpha RP+T+N$ where \[ T=
-		\begin{bmatrix}
-		t_x & t_x & ... & t_x\\
-		t_y & t_y & ... & t_y\\	
-		\end{bmatrix}		  
-		\] 
-		is a repetition matrix of the translation column vector and $N$ is the noise matrix.\newline
-Rotation and translation don't effect the standard deviation of the set of salient points but only scaling does effect. Hence, we can determine the unknown $\alpha$ by ratio of standard deviation of the two sets of points. We define the single dimensional SD as follows
-\begin{equation}
-SD1=\sqrt{\frac{(x_{11}-\bar{x_1})^2+(y_{11}-\bar{y_1})^2+...}{n}}
-\end{equation}    
-	
-\begin{equation}
-SD2=\sqrt{\frac{(x_{21}-\bar{x_2})^2+(y_{21}-\bar{y_2})^2+...}{n}}
-\end{equation}		
-where $\bar{x_i}=\frac{\sum\limits_{j=1}^n x_{ij}}{n}$ and $\bar{y_i}=\frac{\sum\limits_{j=1}^n y_{ij}}{n}$ 
+\item[Ans.]
+\item[Ans.] To find $\alpha,R,t$ we have to solve the optimization problem 
+	\[
+		\min_{\alpha,R,t} J(\alpha,R,t)= \min_{\alpha,R,t} \sum_i{\norm{\mathbf{{p}_{2i}} - \alpha R \mathbf{p}_{1i} - \mathbf{t}}}^2
+		\textnormal{  s.t  } R^TR = I
+	\]
+	Hence, $\frac{\partial J(\alpha,R,t)}{\partial t}=0$\newline
+	$\implies \sum_i 2(\mathbf{{p}_{2i}} - \alpha R \mathbf{p}_{1i} - \mathbf{t})(-1)=0$\newline
+	$\implies \sum_i (\mathbf{{p}_{2i}} - \alpha R \mathbf{p}_{1i})=n\mathbf{t} $ \newline
+	$\implies \mathbf{t}=  \dfrac{\sum_i (\mathbf{{p}_{2i}} - \alpha R \mathbf{p}_{1i})}{n} $ \newline
+	 \begin{equation}
+	\implies\mathbf{t}=  \mathbf{\bar{p}_2}-\alpha R\mathbf{\bar{p}_1}
+\end{equation}	  \newline
+	Substituting this in transformation function gives
+	$\mathbf{p}_{2i} = \alpha \mathbf{R} \mathbf{p}_{1i} + \mathbf{\bar{p}_2}-\alpha R\mathbf{\bar{p}_1} + \mathbf{\eta}_i$.\newline Rearranging terms, we get	
+	$\mathbf{p}_{2i} - \mathbf{\bar{p}_2} = \alpha \mathbf{R}( \mathbf{p}_{1i}-\mathbf{\bar{p}_1}) + \mathbf{\eta}_i$.\newline
+	We can therefore define new matrices $\mathbf{\bar{P_2} }$ and $\mathbf{\bar{P_1}}$  by subtracting the respective mean vectors $\mathbf{\bar{p}_2}$ and $\mathbf{\bar{p}_1}$ from each column of $\mathbf{P_2} $ and $\mathbf{P_1}$ and the cost function transforms to  \begin{equation}
+	\norm{\mathbf{\bar{P_2}} - R (\alpha \mathbf{\bar{P_1}})}_F^2
+		\textnormal{  s.t  } R^TR = I
+	\end{equation}\newline
+		This is similar to the Procrustes problem except for the unknown factor $\alpha$. By performing SVD, we can write  $\mathbf{\bar{P_1}}\mathbf{\bar{P_2}^T}=\mathbf{U^{'}}\mathbf{S^{'}}\mathbf{V^{'^{T}}}$. Hence, $(\alpha\mathbf{\bar{P_1}})\mathbf{\bar{P_2}^T}=\mathbf{U^{'}}(\alpha\mathbf{S^{'}})\mathbf{V^{'^{T}}}$. Hence, the factor $\alpha$ doesn't effect the orthonormal matrices $\mathbf{U^{'}},\mathbf{V^{'}}$. Hence, R can be determined as a normal Procrustes problem as $R=\mathbf{V^{'}}\mathbf{U^{'^{T}}}$.\newline
+		We need to now find $\alpha$.Since, we know R, we define a new matrix $\mathbf{{P_1}^{'}} = R\mathbf{\bar{P}_1}$. Hence, cost function transforms to 
+		\begin{equation}		
+	\norm{\mathbf{\bar{P_2}} - \alpha  \mathbf{{P_1}^{'}}}_F^2
+				\end{equation}
 
-We can thus obtain $\alpha$ as follows 
-\begin{equation}
-\alpha=\frac{SD2}{SD1}
-\end{equation} 
-
-Define \[ \bar{p}=
-		\begin{bmatrix}
-		\bar{x_1}\\
-		\bar{y_1}
-		\end{bmatrix}		  
-		, \bar{q}=
-		\begin{bmatrix}
-		\bar{x_2}\\
-		\bar{y_2}
-		\end{bmatrix}		  
-		\] 
-		and
-		\[ \mu_p=
-		\begin{bmatrix}
-		\bar{x_1} & \bar{x_1} & ...\\
-		\bar{y_1} & \bar{y_1} & ...
-		\end{bmatrix}		  
-		, \mu_q=
-		\begin{bmatrix}
-		\bar{x_2} & \bar{x_2} & ...\\
-		\bar{y_2} & \bar{y_2} & ...
-		\end{bmatrix}		  
-		\] 
-Now, under the transformation $\alpha RP+T+N$, we've 
-\begin{equation}
-\bar{q}=\alpha R\bar{p} + \begin{bmatrix}
-        t_x\\
-        t_y
-        \end{bmatrix}=\alpha R\mu_p + \bar{t}
-\end{equation}
-Here, the noise is assumed to be zero mean and hence doesn't appear in avg. 
-        Hence, $\bar{t}=\bar{q}-\alpha R\bar{p}$. Substituting this back in the transformation, we get 
-        \begin{equation}
-        Q= \alpha RP+ \mu_q-\alpha R\mu_p+N
-        \end{equation} 
-        \begin{equation}
-        Q-\mu_q= \alpha R(P -\mu_p)+N
-        \end{equation} 
-              	
-Let $Q^{'}=Q-\mu_q$ and $P^{'}=P -\mu_p$. We now have $Q^{'}=R(\alpha P^{'})+N$. This is similar to the procrustes problem with $\bar{t} =0$ that was discussed in the handout. We can determine $R$ from there and $t$ from the equation $\bar{t}=\bar{q}-\alpha R\bar{p}$.
-        We thus have $\alpha, R , t$.  
 \end{itemize}
-
-
-
 \item You are given two datasets in the folder \url{http://www.cse.iitb.ac.in/~ajitvr/CS763_Spring2015/HW1/Calib_data}. The file names are Features2D\_dataset1.mat, Features3D\_dataset1.mat, Features2D\_dataset2.mat and \\ Features3D\_dataset2.mat. Each dataset contains (1) the XYZ coordinates of $N$ points marked out on a calibration object, and (2) the XY coordinates of their corresponding projections onto an image plane. Your job is to write a MATLAB program which will determine the $3 \times 4$ projection matrix $M$ such that $P_1 = MP$ where $P$ is a $4 \times N$ matrix containing the 3D object points (in homogeneous coordinates) and $P_1$ is a $3 \times N$ matrix containing the image points (in homogeneous coordinates). Use the SVD method and print out the matrix $M$ on screen (include it in your pdf file as well). Write a piece of code to verify that your computed $M$ is correct. For any one dataset, repeat the computation of the matrix $M$ after adding zero mean i.i.d. Gaussian noise of standard deviation $\sigma = 0.05 \times max_c$ (where $max_c$ is the maximum absolute value of the X,Y,Z coordinate) to every coordinate of $P$ and $P_1$ (leave the homogeneous coordinates unchanged). Comment on your results. Include these comments in your pdf file that you will submit. \textbf{Tips:} A mat file can be loaded into MATLAB memory using the `load' command. To add Gaussian noise, use the command `randn'. \textsf{[5 points]}
 \begin{itemize}
 	\item[Ans.] 
